@@ -7,14 +7,15 @@ Table of Contents
  4. Translations
  5. Covers
  6. Advanced Config Items
- 7. Streams
- 8. MultiMedia Keys
- 9. Dynamic Helper Script - Local Mode
-10. Dynamic Helper Script - Server Mode
-11. Source Code
-12. Debug Logging
-13. Credits
-14. Windows
+ 7. CUE Files
+ 8. Streams
+ 9. MultiMedia Keys
+10. Dynamic Helper Script - Local Mode
+11. Dynamic Helper Script - Server Mode
+12. Source Code
+13. Debug Logging
+14. Credits
+15. Windows
 
 
 
@@ -269,14 +270,67 @@ maxCoverUpdatePerIteration
     displayed. This config controls the number of covers that are sent in one
     batch. The default is again 5. (Values 1..20 are acceptable)
 
+cueFileCodecs
+    List of extra text codecs to try when loading CUE files. UTF-8 and System
+    default are tried first, and then the entries from this config are tried.
+    My Qt4.8 has the following codecs available:
+
+    GBK, CP936, MS936, windows-936, System, UTF-8, ISO-8859-1, latin1, CP819,
+    IBM819, iso-ir-100, csISOLatin1, ISO-8859-15, latin9, UTF-32LE, UTF-32BE,
+    UTF-32, UTF-16LE, UTF-16BE, UTF-16, mulelao-1, roman8, hp-roman8,
+    csHPRoman8, TIS-620, ISO, WINSAMI2, WS2, Apple, macintosh, MacRoman,
+    windows-1258, CP1258, windows-1257, CP1257, windows-1256, CP1256,
+    windows-1255, CP1255, windows-1254, CP1254, windows-1253, CP1253,
+    windows-1252, CP1252, windows-1251, CP1251, windows-1250, CP1250, IBM866,
+    CP866, csIBM866, IBM874, CP874, IBM850, CP850, csPC850Multilingual,
+    ISO-8859-16, iso-ir-226, latin10, ISO-8859-14, iso-ir-199, latin8,
+    iso-celtic, ISO-8859-13, ISO-8859-10, iso-ir-157, latin6, ISO-8859-10:1992,
+    csISOLatin6, ISO-8859-9, iso-ir-148, latin5, csISOLatin5, ISO-8859-8, ISO,
+    iso-ir-138, hebrew, csISOLatinHebrew, ISO-8859-7, ECMA-118, greek,
+    iso-ir-126, csISOLatinGreek, ISO-8859-6, ISO-8859-6-I, ECMA-114, ASMO-708,
+    arabic, iso-ir-127, csISOLatinArabic, ISO-8859-5, cyrillic, iso-ir-144,
+    csISOLatinCyrillic, ISO-8859-4, latin4, iso-ir-110, csISOLatin4, ISO-8859-3,
+    latin3, iso-ir-109, csISOLatin3, ISO-8859-2, latin2, iso-ir-101,
+    csISOLatin2, KOI8-U, KOI8-RU, KOI8-R, csKOI8R, Iscii-Mlm, Iscii-Knd,
+    Iscii-Tlg, Iscii-Tml, Iscii-Ori, Iscii-Gjr, Iscii-Pnj, Iscii-Bng, Iscii-Dev,
+    TSCII, GB18030, GB2312, gb2312.1980-0, gbk-0, EUC-JP, ISO-2022-JP,
+    Shift_JIS, jisx0201*-0, jisx0208*-0, JIS7, SJIS, MS_Kanji, EUC-KR,
+    ksc5601.1987-0, cp949, Big5, Big5-HKSCS, big5-0, big5hkscs-0, Big5-ETen,
+    CP950
+
 e.g.
 [General]
 iconTheme=oxygen
 maxCoverFindPerIteration=5
 maxCoverUpdatePerIteration=5
+cueFileCodecs=GBK, big5-0
 
 
-7. Streams
+7. CUE Files
+============
+
+If Cantata is running with MPD>=0.17, then it will attempt to parse the contents
+of CUE files. The CUE file will be parsed to ascertain the album and track
+details. The track durations for all bar the last should be accurate, and
+Cantata will attempt to determine the dutation of the last track - but this
+might not be 100% accurate.
+
+If the CUE file references an audio file that does not exist in the MPD music
+folder, then the CUE file contents will NOT be used.
+
+There is no reliable way for Cantata to ascertain the text encoding that a CUE
+file uses - so, for portabiity, it would be best if your CUE files used UTF-8
+encoding. When loading a CUE file, Cantata will attempt to load the file as if
+it was UTF-8 encoded, if this fails it will try with the "System" codec. You may
+add to this list of ecodings to try by using the 'cueFileCodecs' config item (as
+detailed in section 6 above). If Cantata fails with all configured encodings,
+then it will 'peek' at the 1st 1k bytes, and ask Qt to see if it can determine
+the encoding - and fallback to UTF-8 otherwise. (This 'peek'ing and fallback was
+how Cantata behaved in pre 1.2 versions - and is how Clementine behaves (where
+Cantata' CUE file support originates from.))
+
+
+8. Streams
 ==========
 
 Cantata contains a list of in-built stream categories, or providers. To import
@@ -337,7 +391,7 @@ tarball, then they will be copied to the install location and used as icons for
 the respective category.
 
 
-8. MultiMedia Keys
+9. MultiMedia Keys
 ==================
 
 Cantata may be controlled via the media keys on some keyboards. To enable this,
@@ -352,8 +406,8 @@ https://code.google.com/p/mediakeys-daemon/ which is a python re-implementation
 of the interface.
 
 
-9. Dynamic Helper Script - Local Mode
-=====================================
+10. Dynamic Helper Script - Local Mode
+======================================
 
 When a dynamic playlist is loaded in Cantata, the cantata-dynamic helper script
 is executed in the background to do the actual song selection. In this way the
@@ -390,7 +444,7 @@ playlist, load the 'MyPlaylist' playlist, and start this on the mpd at
     MPD_HOST=pass@hostname MPD_PORT=1234 /usr/share/cantata/scripts/cantata-dynamic start
 
 
-10. Dynamic Helper Script - Server Mode
+11. Dynamic Helper Script - Server Mode
 =======================================
 
 In addition to the above, the helper script may be installed on the system
@@ -589,7 +643,7 @@ addition of a header - e.g.
 {CANTATA/<id>}STATUS:STATE:<current status>\nRULES:<name of currently active rule>\nTIME:<epoch time since started, or last rule modification>
 
 
-11. Source Code
+12. Source Code
 ===============
 
 The Cantata source folder contains the following structure:
@@ -617,7 +671,7 @@ The Cantata source folder contains the following structure:
     windows    - Files relevant to creating the windows installer.
 
 
-12. Debug Logging
+13. Debug Logging
 =================
 
 Cantata contains some debug logging that might help to diagnose certain issues.
@@ -650,7 +704,7 @@ NOTE: The above will function regardless of whether you have created a Debug or
 Release build.
 
 
-13. Credits
+14. Credits
 ===========
 
 Cantata contains code/icons from:
@@ -673,7 +727,7 @@ Cantata contains code/icons from:
     Sidebar icons  - Taken from IcoMoon - http://icomoon.io/#icons
 
 
-14. Windows
+15. Windows
 ===========
 
 The following steps are used to compile Cantata, and create the windows
